--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.contextPath=/demo
-spring.datasource.url=jdbc:mysql://34.122.221.188:3306/biasecommerce
+spring.datasource.url=jdbc:mysql://localhost:3306/arqui?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=6942889drago9786
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.generate-ddl=false
