--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,9 @@ spring:
   datasource:
     name: smart_idea
     platform: mysql
-    url: jdbc:mysql://localhost:3306/covid_database
+    url: jdbc:mysql://localhost:3306/arqui
     username: root
-    password: ABCabc123
+    password:
 
     driver-class-name: com.mysql.jdbc.Driver
     hikari:
