--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     name: smart_idea
     platform: mysql
-    url: jdbc:mysql://localhost:3306/arqui
+    url: jdbc:mysql://localhost:3306/covid_database
     username: root
     password:
 
