--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,11 +2,11 @@ spring:
   application:
     name: covid_Bolivia
   datasource:
-    name: smart_idea
+    name: covid_Database
     platform: mysql
     url: jdbc:mysql://localhost:3306/covid_database
     username: root
-    password:
+    password: ABCabc123
 
     driver-class-name: com.mysql.jdbc.Driver
     hikari:
