--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: https://dev-tnvggww.us.auth0.com/
+          issuer-uri: https://dev--tnvggww.us.auth0.com/
   datasource:
     name: arqui_soft
     platform: mysql
