--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,3 +37,7 @@ mybatis:
 server:
   error:
     include-message: always
+  ssl:
+    key-store: classpath:localhost.p12
+    key-store-type: PKCS12
+    key-password: changeit
