--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,10 +2,11 @@ spring:
   application:
     name: covid_Bolivia
   datasource:
-    name: covid_Database
+    name: arqui_soft
     platform: mysql
-    url: jdbc:mysql://localhost:3306/covid_database
-    username: root
+    url: jdbc:mysql://us-cdbr-east-03.cleardb.com/heroku_fe1b8c9c4911eaf
+    username: b8c0c234043a4f
+    password: 9b5125d7
 
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
@@ -28,3 +29,7 @@ mybatis:
 server:
   error:
     include-message: always
+#  ssl:
+#    key-store: classpath:localhost.p12
+#    key-store-type: PKCS12
+#    key-password: changeit
