--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,7 +29,7 @@ mybatis:
 server:
   error:
     include-message: always
-#  ssl:
-#    key-store: classpath:localhost.p12
-#    key-store-type: PKCS12
-#    key-password: changeit
+  ssl:
+    key-store: classpath:localhost.p12
+    key-store-type: PKCS12
+    key-password: changeit
